# claude-scientific-skills

./: README.md  SECURITY.md  pyproject.toml
docs/: scientific-skills.md
scientific-skills/parallel-web/references/: web-extract.md  web-search.md
